--- a/server/src/main/resources/generator/biome/minecraft/mesa.yml
+++ b/server/src/main/resources/generator/biome/minecraft/mesa.yml
@@ -15,8 +15,8 @@ decorators:
     below:
         # Plain old mesa surface
       - id: "nukkitx:surface"
-        top: "sand#1" # red sand
-        filler: "stained_hardened_clay#1" # orange
+        top: "sand{sand_type=red}"
+        filler: "stained_hardened_clay{color=orange}"
     above:
         # Generate clay layers
       - id: "nukkitx:mesa_surface"
@@ -28,20 +28,20 @@ decorators:
         base: "hardened_clay"
         bands:
           - count: 21
-            block: "stained_hardened_clay#1" # orange
+            block: "stained_hardened_clay{color=orange}"
           - count: "2-5"
             size: "1-3"
-            block: "stained_hardened_clay#4" # yellow
+            block: "stained_hardened_clay{color=yellow}"
           - count: "2-5"
             size: "2-4"
-            block: "stained_hardened_clay#12" # brown
+            block: "stained_hardened_clay{color=brown}"
           - count: "2-5"
             size: "1-3"
-            block: "stained_hardened_clay#14" # red
+            block: "stained_hardened_clay{color=red}"
           - count: "3-5"
-            block: "stained_hardened_clay" # white
-            above: "stained_hardened_clay#8" # light gray
-            below: "stained_hardened_clay#8" # light gray
+            block: "stained_hardened_clay{color=white}"
+            above: "stained_hardened_clay{color=light_gray}"
+            below: "stained_hardened_clay{color=light_gray}"
 
 populators:
     # Dead bushes
@@ -49,14 +49,14 @@ populators:
     chance: 0.078125 # about 20 per chunk
     patchSize: 4
     on:
-      - "sand#1"
+      - "sand{sand_type=red}"
       - "hardened_clay"
-      - "stained_hardened_clay" # white
-      - "stained_hardened_clay#1" # orange
-      - "stained_hardened_clay#4" # yellow
-      - "stained_hardened_clay#8" # light gray
-      - "stained_hardened_clay#12" # brown
-      - "stained_hardened_clay#14" # red
+      - "stained_hardened_clay{color=white}"
+      - "stained_hardened_clay{color=orange}"
+      - "stained_hardened_clay{color=yellow}"
+      - "stained_hardened_clay{color=light_gray}"
+      - "stained_hardened_clay{color=brown}"
+      - "stained_hardened_clay{color=red}"
     block: "deadbush"
 
     # Cactus
@@ -64,7 +64,7 @@ populators:
     chance: 0.01953125 # about 5 per chunk
     patchSize: 10
     height: "1-3"
-    on: "sand#1"
+    on: "sand{sand_type=red}"
     block: "cactus"
 
     # Sugar cane
@@ -72,7 +72,7 @@ populators:
     chance: 0.01171875 # about 3 per chunk
     patchSize: 20
     height: "1-3"
-    on: "sand,sand#1"
+    on: "sand,sand{sand_type=red}"
     water: "water"
     block: "reeds"
 
