--- a/server/src/main/resources/generator/biome/minecraft/taiga.yml
+++ b/server/src/main/resources/generator/biome/minecraft/taiga.yml
@@ -27,16 +27,11 @@ populators:
     # Berry bushes & mushrooms
   - id: "nukkitx:shrub"
     chance: 0.0078125 # about 2 per chunk
-    on: "grass,podzol,dirt#1"
+    on: "grass,podzol,dirt{dirt_type=coarse}"
     block: "sweet_berry_bush,2*brown_mushroom,red_mushroom"
 
     # Tall grass & ferns
   - id: "nukkitx:shrub"
     chance: 0.00390625 # about 1 per chunk
-    on: "grass,podzol,dirt#1"
-    block:
-      - "tallgrass"
-      - "tallgrass"
-      - "tallgrass"
-      - "tallgrass"
-      - "tallgrass#2" # fern
+    on: "grass,podzol,dirt{dirt_type=coarse}"
+    block: "4*tallgrass,tallgrass{tall_grass_type=fern}"
