--- a/server/pom.xml
+++ b/server/pom.xml
@@ -253,6 +253,12 @@
             <groupId>com.nukkitx</groupId>
             <artifactId>block-state-updater</artifactId>
             <version>1.16.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.nukkitx</groupId>
+                    <artifactId>nbt</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.nukkitx</groupId>
@@ -293,12 +299,6 @@
             <groupId>net.sf.jopt-simple</groupId>
             <artifactId>jopt-simple</artifactId>
             <version>5.0.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nukkitx</groupId>
-            <artifactId>nbt</artifactId>
-            <version>2.0.1</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
