Refactor translation strings (#41)
* Enhancement and update

* Remove folder

* Add submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,12 @@
 [submodule "src/main/resources/data"]
 	path = server/src/main/resources/data
 	url = https://github.com/CloudburstMC/Data.git
+[submodule "src/main/resources/locale/cloudburst"]
+	path = server/src/main/resources/locale/cloudburst
+	url = https://github.com/CloudburstMC/Languages/
+[submodule "src/main/resources/locale/vanilla"]
+	path = server/src/main/resources/locale/vanilla
+	url = https://github.com/NukkitX/Language/
+[submodule "src/main/resources/data"]
+	path = server/src/main/resources/data
+	url = https://github.com/CloudburstMC/Data.git
