--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
             <groupId>org.jline</groupId>
             <artifactId>jline-terminal-jna</artifactId>
             <version>${jline.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jline</groupId>
@@ -138,6 +139,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j18-impl</artifactId>
             <version>${log4j2.version}</version>
+            <scope>runtime</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
