--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,11 @@
             <version>2.0.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.cloudburstmc</groupId>
+            <artifactId>WaifUPnP</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
