--- a/pom.xml
+++ b/pom.xml
@@ -327,8 +327,8 @@
         </dependency>
         <dependency>
             <groupId>org.cloudburstmc</groupId>
-            <artifactId>WaifUPnP</artifactId>
-            <version>1.1</version>
+            <artifactId>upnp</artifactId>
+            <version>1.1.1</version>
         </dependency>
     </dependencies>
 
