--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,5 +27,5 @@ jobs:
         uses: actions/upload-artifact@v1
         if: success()
         with:
-          name: Nukkit
+          name: Cloudburst
           path: target/Cloudburst.jar
