--- a/api/pom.xml
+++ b/api/pom.xml
@@ -130,6 +130,11 @@
             <artifactId>fastutil-int-common</artifactId>
             <version>8.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.nukkitx.fastutil</groupId>
+            <artifactId>fastutil-reference-sets</artifactId>
+            <version>8.3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -142,5 +147,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
     </dependencies>
 </project>
