--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,6 +9,7 @@
 
     <properties>
         <api-version>0.0.3-SNAPSHOT</api-version>
+        <protocol.version>2.6.2-SNAPSHOT</protocol.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.jupiter.version>5.0.0-M4</junit.jupiter.version>
@@ -265,8 +266,8 @@
         <!-- Miscellaneous -->
         <dependency>
             <groupId>com.nukkitx.protocol</groupId>
-            <artifactId>bedrock-v422</artifactId>
-            <version>2.6.1-SNAPSHOT</version>
+            <artifactId>bedrock-v428</artifactId>
+            <version>2.6.2-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.nukkitx</groupId>
