revert to com.nukkitx.math library

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -106,7 +106,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.cloudburstmc</groupId>
+            <groupId>com.nukkitx</groupId>
             <artifactId>math</artifactId>
             <version>1.1.0</version>
         </dependency>
