--- a/api/pom.xml
+++ b/api/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>fastutil-reference-sets</artifactId>
             <version>8.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.nukkitx.fastutil</groupId>
+            <artifactId>fastutil-reference-reference-maps</artifactId>
+            <version>8.5.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.inject</groupId>
