Added BOOK_DATA item key and increased the compiler error amount

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -147,6 +147,12 @@
                             <version>1.18.22</version>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-Xmaxerrs</arg>
+                        <arg>1000</arg>
+                        <arg>-Xmaxwarns</arg>
+                        <arg>2000</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
